# strong_type

./: CMakeLists.txt
example/: CMakeLists.txt
example/module/: CMakeLists.txt  Main.cpp
include/strong_type/: arithmetic.hpp  boolean.hpp  formattable.hpp  hashable.hpp  istreamable.hpp  iterator.hpp  ordered.hpp  ordered_with.hpp  ostreamable.hpp  range.hpp  regular.hpp  semiregular.hpp  strong_ordering.hpp  strong_type.ixx  type.hpp
test/: CMakeLists.txt  empty.cpp  test.cpp  test_affine_point.cpp  test_arithmetic.cpp  test_bicrementable.cpp  test_bitarithmetic.cpp  test_boolean.cpp  test_convertible_to.cpp  test_decrementable.cpp  test_difference.cpp  test_equality.cpp  test_equality_with.cpp  test_hashable.cpp  test_implicitly_convertible_to.cpp  test_incrementable.cpp  test_indexed.cpp  test_invocable.cpp  test_iostreamable.cpp  test_istreamable.cpp  test_iterator.cpp  test_ordered.cpp  test_ordered_with.cpp  test_ostreamable.cpp  test_pointer.cpp  test_range.cpp  test_regular.cpp  test_scalable_with.cpp  test_semiregular.cpp  test_type.cpp  test_unique.cpp
